# ChangeLog for app-arch/unrar
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/unrar/ChangeLog,v 1.174 2012/05/17 12:00:51 ssuominen Exp $

*unrar-4.2.2 (17 May 2012)

  17 May 2012; Samuli Suominen <ssuominen@gentoo.org> +unrar-4.2.2.ebuild:
  Version bump.

*unrar-4.2.1 (05 May 2012)

  05 May 2012; Samuli Suominen <ssuominen@gentoo.org> +unrar-4.2.1.ebuild:
  Version bump. Introduce unrar_make() function inside src_compile() to
  simplify building.

  19 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> -unrar-4.0.7.ebuild:
  old

  19 Mar 2012; Raúl Porcel <armin76@gentoo.org> unrar-4.1.4-r2.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #406665

  07 Mar 2012; Brent Baude <ranger@gentoo.org> unrar-4.1.4-r2.ebuild:
  Marking unrar-4.1.4-r2 ppc for bug 406665

  06 Mar 2012; Brent Baude <ranger@gentoo.org> unrar-4.1.4-r2.ebuild:
  Marking unrar-4.1.4-r2 ppc64 for bug 406665

  06 Mar 2012; Jeroen Roovers <jer@gentoo.org> unrar-4.1.4-r2.ebuild:
  Stable for HPPA (bug #406665).

  05 Mar 2012; Agostino Sarubbo <ago@gentoo.org> unrar-4.1.4-r2.ebuild:
  Stable for amd64, wrt bug #406665

  05 Mar 2012; Jeff Horelick <jdhore@gentoo.org> unrar-4.1.4-r2.ebuild:
  marked x86 per bug 406665

  15 Feb 2012; Samuli Suominen <ssuominen@gentoo.org> -unrar-4.1.4-r1.ebuild:
  old

*unrar-4.1.4-r2 (15 Feb 2012)

  15 Feb 2012; Samuli Suominen <ssuominen@gentoo.org> +unrar-4.1.4-r2.ebuild:
  Install rest of the headers as required by sys-fs/rar2fs. The line between
  private and public headers is a bit unclear.

  23 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> -unrar-4.1.4.ebuild:
  old

*unrar-4.1.4-r1 (18 Jan 2012)

  18 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> +unrar-4.1.4-r1.ebuild:
  Build libunrar shared library wrt #177402 by Josh Jackson

*unrar-4.1.4 (18 Jan 2012)

  18 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> +unrar-4.1.4.ebuild:
  Version bump.
